fix modal z-index

--- a/app/assets/stylesheets/api/modal.scss
+++ b/app/assets/stylesheets/api/modal.scss
@@ -68,6 +68,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.6);
+  z-index: 1000;
 }
 
 .modal-buttons {
